<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">RideSyncer</string>
    <string name="action_settings">Settings</string>
    <string name="or">or</string>
    <string name="create_account">Create an Account</string>
    <string name="weekday">Weekday</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="request_sync">Request Sync</string>
    <string name="syncing">Syncing&#8230;</string>
    <string name="registering">Registering&#8230;</string>
    <string name="note">Note</string>
    <string name="verification_note">A verification code has been sent to the email you used to register.</string>
    <string name="edit_syncs">Edit Syncs</string>

    <!-- input labels -->
    <string name="etfEmailAddress">Email Address:</string>
    <string name="etfUsername">Username:</string>
    <string name="pwtfPassword">Password:</string>
    <string name="pwtfRepeatPassword">Repeat Password:</string>
    <string name="etfFName">First Name:</string>
    <string name="etfLName">Last Name:</string>
    <string name="etfAddress">Address:</string>
    <string name="etfCity">City:</string>
    <string name="etfState">State:</string>
    <string name="etfZip">Zip Code:</string>
    <string name="etfRide">Enter a description of your car:</string>
    <string name="etfValidation">Enter Verification Code</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="btnVerify">Verify</string>
    <string name="logout">Logout</string>
    <string name="btnAdd">Add</string>
    <string name="etfStartDate">Start Date:</string>
    <string name="etfEndDate">End Date:</string>
    <string name="etfStartTime">Start time:</string>
    <string name="etfEndTime">End time:</string>
    <string name="defaultTime">hh:mm</string>
    <string name="defaultDate">mm/dd/yyyy</string>
    <string name="chkbxM">M</string>
    <string name="chkbxT">T</string>
    <string name="chkbxW">W</string>
    <string name="chkbxTh">Th</string>
    <string name="chkbxF">F</string>
    <string name="chkbxSa">Sa</string>
    <string name="chkbxSu">Su</string>
    <string name="selectWeekday">Select one</string>

    <!-- errors -->
    <string name="error_username_short">Username must be at least 6 characters</string>
    <string name="error_invalid_username">Only letters, numbers, and underscores are allowed</string>
    <string name="error_invalid_edu_email">Enter a valid .edu email</string>
    <string name="error_password_short">Password must be at least 6 characters</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_invalid_zip">Zip code must be 5 numbers</string>
    <string name="erro_incorrect_verification_code">Incorrect verification code</string>
    <string name="error_username_taken">Username already taken</string>
    <string name="error_email_taken">Email already taken</string>
    <string name="threePounds">###</string>
    <string name="dash">-</string>

</resources>